Adding tests, cjrrecting error